--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
-@import '~bootstrap/scss/bootstrap';
+@import 'variables.scss';
 
 body {
-    background: #E6EFF6;
+    background: $background-color;
     font-family: 'Open Sans', arial;
 }
