--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,76 @@
 @import 'variables.scss';
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 body {
-    background: $background-color;
-    font-family: 'Open Sans', arial;
+	background: $light-blue;
+}
+/* signin */
+.signin-card {
+	background: #2a3955; 
+	padding: 15px;
+	margin-top: 75px;
+	margin-bottom: 50px;
+	margin-left: 15%;
+	width: 25%;
+	color: #8095bb;
+}
+.signin-card input {
+	font-family: 'Courier New', arial;
+	border-radius: 0;
+	border: 0;
+}
+.signin-card i {
+	color: #2a3955;
+}
+.fa {
+	line-height: 1.5;
+}
+.signin-card .submit {
+	margin-bottom: 0;
+}
+.input-group-text {
+	background: #77a5f8;
+	border: 0;
+	border-radius: 0;
+	margin: 0;
+}
+body.signin-body {
+	height: 100%;
+	font-family: 'Open Sans', arial;
+}
+html.signin-html {
+	background: linear-gradient(to right, #5e87d3, #bed5ff );
+}
+.container-signin,
+body.signin-body {
+	background: none !important;
+}
+.index-notification {
+	color: white;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+.check {
+	font-family: 'Courier New', arial;
+	display: inline-block;
+	margin-left: 35px;
+}
+/* submit */
+.submit {
+	font-family: 'Courier New', arial;
+	background: #466cb2;
+	padding: 5px 15px;
+	margin-bottom: 10px;
+	border: 0;
+	color: #bed5ff;
+	font-size: 16px;
+	transition: .5s;
+	cursor: pointer;
+}
+.submit:hover {
+	background: #77a5f8;
 }
