--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 @import 'variables.scss';
-
+/* defailts */
 * {
 	margin: 0;
 	padding: 0;
@@ -7,6 +7,46 @@
 }
 body {
 	background: $light-blue;
+}
+li.not-list-style { 
+	list-style: none; 
+}
+a { 
+	color: inherit; 
+	text-decoration: none;   
+}
+/* containers */
+.container-menu,
+.container-banner { 
+	width: 100%; 
+	max-width: 1080px; 
+	padding: 0; 
+	margin: auto; 
+}
+header > .container-menu {
+	margin-top: 120px;
+}
+.top-menu .container-menu {
+	background: inherit;
+}
+.container { 
+	width: 100%; 
+	max-width: 1080px; 
+	padding: 20px; 
+	margin: auto; 
+	background: #CCDFEC;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.container-points {
+	display: block;
+}
+.container-points h2 {
+	display: inline-block;
+}
+.container-internat {
+	align-items: flex-start;
 }
 /* signin */
 .signin-card {
@@ -16,12 +56,15 @@ body {
 	margin-bottom: 50px;
 	margin-left: 15%;
 	width: 25%;
-	color: #8095bb;
+	color: white;
 }
 .signin-card input {
 	font-family: 'Courier New', arial;
 	border-radius: 0;
 	border: 0;
+}
+input[type="checkbox"] {
+	background: #77a5f8;
 }
 .signin-card i {
 	color: #2a3955;
@@ -57,7 +100,82 @@ body.signin-body {
 .check {
 	font-family: 'Courier New', arial;
 	display: inline-block;
-	margin-left: 35px;
+	margin-left: 30px;
+	font-size: 15px;
+	color: #8095bb;
+}
+/* header */ 
+.top-menu {
+	background: #004B7E;
+	padding: 0;
+	height: 40px;
+	max-height: 80px;
+	overflow: hidden;
+}
+.top-menu > .container-menu > img {
+	width: 10%; 
+	height: auto; 
+	margin: 5px 0;
+} 
+/*.profile-thing {  это нужно для фотки человека 
+	float: right;
+}
+.profile-photo img {
+	width: 10%; 
+	height: auto; 
+	margin: 5px 0;
+	float: right;
+}*/
+/* nav */
+.main-menu {
+	background: #004B7E;
+}
+nav ul { 
+	margin: 0; 
+	font-size: 0; 
+}
+nav > ul > li { 
+	font-size: 15px; 
+	color: #fff;
+	padding: 10px 0;
+	display: inline-block; 
+	vertical-align: middle;
+	margin: 0 10px; 
+	font: 20px/24px;
+	cursor: pointer;
+} 
+nav > ul > li.menu-drop {
+	padding: 0;
+}
+nav > ul > li a { 
+	padding: 10px;
+	transition: 0.5s;
+	cursor: pointer;
+}
+nav > ul > li > a:hover {
+	background: rgba(0, 55, 106, .9);
+	color: #ccc;
+	text-shadow: 0 0 3px #555;
+	text-decoration: none;
+}
+nav > ul > li.active { 
+	background: #002C4A;
+}
+ul.dropdown-menu {
+	border-radius: 0;
+	border: 0;
+}
+ul.dropdown-menu li {
+	padding: 5px 0;
+	transition: .5s;
+}
+ul.dropdown-menu,
+ul.dropdown-menu li {
+	background: #CCDFEC;
+}
+
+ul.dropdown-menu li:hover {
+	background: #B3C8E6;
 }
 /* submit */
 .submit {
@@ -73,4 +191,54 @@ body.signin-body {
 }
 .submit:hover {
 	background: #77a5f8;
+}
+/* profile */
+.block-information {
+	padding: 20px;
+	background: #93BAC8;
+	margin-bottom: 20px;
+}
+.profile-information {
+	width: 50%;
+}
+.profile-information h3 {
+	margin-top: 10px;
+}
+.timetable {
+	width: 48%;
+	float: right;
+	margin-bottom: 20px;
+}
+.timetable h2 {
+	margin-bottom: 10px;
+}
+.timetable-table {
+	width: 100%;
+	background: #B3C8E6;
+	border-collapse: collapse;
+	transition: .5s;
+	box-shadow: 2px 2px 4px #666;
+}
+.timetable-table:hover {
+	box-shadow: 5px 5px 8px #666;
+}
+.timetable-table tr {
+	border-bottom: 1px solid rgba(129, 150, 180, .2);
+}
+.timetable-table th,
+.timetable-table td {
+	padding: 3px;
+	text-align: left;
+}
+.timetable-table th:nth-child(3n),
+.timetable-table td:nth-child(3n),
+.timetable-table th:nth-child(3n+1),
+.timetable-table td:nth-child(3n+1) {
+	text-align: center;
+}
+.tal {
+	text-align: left;
+}
+tr.lesson-now {
+	background: #CCDFEC;
 }
