--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,8 @@ body {
 li.not-list-style { 
 	list-style: none; 
 }
-a { 
+a,
+a:hover { 
 	color: inherit; 
 	text-decoration: none;   
 }
@@ -140,12 +141,26 @@ nav > ul > li {
 	padding: 10px 0;
 	display: inline-block; 
 	vertical-align: middle;
-	margin: 0 10px; 
+	margin: 0 5px; 
 	font: 20px/24px;
 	cursor: pointer;
 } 
 nav > ul > li.menu-drop {
 	padding: 0;
+	transition: 0.5s;
+	cursor: pointer;
+}
+nav > ul > li.menu-drop:hover { 
+	background: rgba(0, 55, 106, .9);
+	color: #ccc;
+	text-decoration: none;
+}
+nav > ul > li .btn-group.show {
+	background: rgba(0, 55, 106, .9);
+	color: #ccc;
+}
+nav > ul > li.active { 
+	background: #002C4A;
 }
 nav > ul > li a { 
 	padding: 10px;
@@ -157,9 +172,6 @@ nav > ul > li > a:hover {
 	color: #ccc;
 	text-shadow: 0 0 3px #555;
 	text-decoration: none;
-}
-nav > ul > li.active { 
-	background: #002C4A;
 }
 ul.dropdown-menu {
 	border-radius: 0;
@@ -176,6 +188,59 @@ ul.dropdown-menu li {
 
 ul.dropdown-menu li:hover {
 	background: #B3C8E6;
+}
+.dropdown {
+  position: relative;
+}
+.dropdown-toggle:focus {
+  outline: 0;
+}
+.dropdown-menu > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333333;
+  white-space: nowrap;
+}
+.open {
+	position: relative;
+}
+.open > .dropdown-menu {
+  display: block;
+}
+.dropdown .dropdown-menu {
+  top: auto;
+  bottom: 100%;
+  margin-bottom: 2px;
+}
+.dropdown-menu {
+	position: absolute;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 130px;
+    padding: 5px 0;
+    margin: 5px 0 0;
+    list-style: none;
+    font-size: 14px;
+    text-align: left;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    background-clip: padding-box;
+}
+.right-dropdown-menu {
+	left: auto;
+    right: 0;
+    top: 18px;
+}
+.dropdown-menu hr {
+	margin: 0;
+	overflow: hidden;
+	background-color: #CCDFEC;
+	border: 1px solid #CCDFEC;
+	border-top: 1px solid #93BAC8;
+	border-bottom: 1px solid #93BAC8;
 }
 /* submit */
 .submit {
