--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,13 @@ a:hover {
 	color: inherit; 
 	text-decoration: none;   
 }
+h2 {
+	font-size: 1.5em;
+	font-weight: normal;
+}
+h3 {
+	font-size: 1.17em;
+}
 /* containers */
 .container-menu,
 .container-banner { 
@@ -258,6 +265,53 @@ ul.dropdown-menu li:hover {
 .submit:hover {
 	background: #77a5f8;
 }
+/* loader */
+.loader :first-child {
+	background:rgb(0, 75, 126);
+	animation-delay:-1.5s
+}
+.loader :nth-child(2) {
+	background:rgb(0, 75, 126);
+	animation-delay:-1s
+}
+.loader :nth-child(3) {
+	background:rgb(0, 75, 126);
+	animation-delay:-0.5s
+}
+.loader :last-child {
+	background:rgb(0, 75, 126)
+}
+.loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+}
+.loader hr{ 
+	border: 0;
+	margin: 0;
+	width: 40%;
+	height: 40%;
+	position: absolute;
+	border-radius: 50%;
+	animation: spin 2s ease infinite;
+}
+@keyframes spin{
+	0%,100% {
+		transform: translate(0)
+	}
+	25% {
+		transform: translate(160%)
+	}
+	50% {
+		transform: translate(160%, 160%)
+	}
+	75% {
+		transform: translate(0, 160%)
+	}
+}
 /* profile */
 .block-information {
 	padding: 20px;
@@ -307,4 +361,48 @@ ul.dropdown-menu li:hover {
 }
 tr.lesson-now {
 	background: #CCDFEC;
+}
+/* notifications */
+.notifications { 
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+.notifications .one-notif { 
+	padding: 10px;
+	margin-right: 15px;
+	flex-basis: 50%;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	box-shadow: 2px 2px 4px #777;
+}
+.notifications .read-notification {
+	background: #B3C8E6;
+}
+.notifications .unread-notification {
+	background: #7594BF;
+}
+.notifications .from-name {
+	color: #4D4D4D;
+	font: 15px/1.5 "Open Sans", arial;
+}
+.notifications .transaction-time {
+	color: #4D4D4D;
+	font: 15px/1.5 "Open Sans", arial;
+}
+.notifications .cause {
+	color: #000;
+	font: 500 17px/1.5 "Open Sans", arial;
+}
+.notifications .points {
+	font: 700 27px/1.5 "Open Sans", arial;
+	float: right;
+	align-self: center;
+	margin-top: -15px;
+}
+.notifications .good-points {
+	color: #007800;
+}
+.notifications .bad-points {
+	color: red;
 }
