--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -523,6 +523,7 @@ textarea.form-control {
 	width: 40%;
 }
 .form-40-marg-all {
+	width: 40%;
 	margin-right: 60%;
 	margin-bottom: 20px;
 }
@@ -959,7 +960,7 @@ textarea.form-control {
 	margin-top: -10px;
 	padding-top: 0;
 }
-.question .userlink {
+.userlink {
 	font-size: 16px;
 	color: #4d4d4d;
 }
@@ -974,6 +975,13 @@ textarea.form-control {
 	transition: .5s;
 	cursor: pointer;
 }
+.question-answer-field {
+	position: relative;
+	margin-bottom: 10px;
+}
+.answer-text {
+	margin-left: 20px;
+}
 .question-answer-send-text {
 	width: 80%;
 	margin-right: 20%;
@@ -981,9 +989,10 @@ textarea.form-control {
 	resize: vertical;
 	padding: 5px 10px;
 }
-.question-answer {
-	margin-top: 10px;
-	position: relative;
+img.answer {
+	width: 15px;
+	position: absolute;
+	top: 5px;
 }
 .table-sm td {
 	padding-left: 0;
