--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,6 +33,9 @@ h3 {
 }
 ol.ol {
 	font-size: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 .not-found {
 	font-size: 20px;
@@ -70,6 +73,7 @@ a.a-small {
 .button-filter:hover {
 	background: rgba(0,75,126,.6);
 }
+
 /* containers */
 .container-menu,
 .container-banner { 
@@ -510,6 +514,10 @@ textarea.form-control {
 	flex-basis: 60%;
 	width: 60%;
 }
+.form-80 {
+	flex-basis: 80%;
+	width: 80%;
+}
 .form-50 {
 	flex-basis: 50%;
 	width: 50%;
@@ -543,7 +551,7 @@ textarea.form-control {
 	color: #bed5ff;
 }
 .poll-elem {
-	width: 40%;
+	width: 45%;
 	padding: 10px;
 	box-shadow: 2px 2px 4px #777;
 	margin-bottom: 20px;
@@ -934,7 +942,9 @@ textarea.form-control {
 }
 .question-text {
 	font-size: 24px;
-	margin-bottom: 10px;
+}
+.question-text p {
+	margin-bottom: 0;
 }
 .question-remove {
 	margin-right: 5px;
@@ -977,7 +987,7 @@ textarea.form-control {
 }
 .question-answer-field {
 	position: relative;
-	margin-bottom: 10px;
+	margin: 15px 0;
 }
 .answer-text {
 	margin-left: 20px;
@@ -996,4 +1006,8 @@ img.answer {
 }
 .table-sm td {
 	padding-left: 0;
+}
+/* settings */
+.change {
+	width: 50%;
 }
