--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -71,9 +71,11 @@ a.a-small {
 	margin-right: 10px;
 }
 .button-filter:hover {
+	background: rgba(0,75,126,.7);
+}
+.active-par {
 	background: rgba(0,75,126,.6);
 }
-
 /* containers */
 .container-menu,
 .container-banner { 
