--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1013,6 +1013,24 @@ img.answer {
 .role_select {
 	height: auto;
 }
+/* timetable */
+.one-day {
+	flex-basis: 30%;
+	margin-bottom: 15px;
+	box-shadow: 2px 2px 3px #888;
+	transition: .3s;
+	align-self: flex-start;
+}
+.one-day:hover { 
+	box-shadow: 5px 5px 7px #666;
+}
+.one-day h3 {
+	background: #93BAC8;
+	padding: 5px 10px;
+	text-align: center;
+	font-weight: 500;
+	margin-bottom: 0;
+}
 /* main */
 .w-45 {
 	width: 45%;
