--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -872,6 +872,20 @@ textarea.form-control {
 	color: #7F2200;
 	background: #E26638;
 }
+.delete-user {
+	border: 0;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	font-size: 20px;
+	font-weight: bold;
+	transition: .5s;
+	text-align: center;
+	cursor: pointer;
+	color: #7F2200;
+	background: #E26638;
+	margin-left: 5px;
+}
 .add-user {
 	border: 0;
 	display: inline-block;
