--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,13 +9,13 @@ body {
 	background: $light-blue;
 	font-family: 'Open Sans', arial;
 }
-li.not-list-style { 
-	list-style: none; 
+li.not-list-style {
+	list-style: none;
 }
 a,
-a:hover { 
-	color: inherit; 
-	text-decoration: none;   
+a:hover {
+	color: inherit;
+	text-decoration: none;
 }
 h2 {
 	font-size: 1.5em;
@@ -74,11 +74,11 @@ a.a-small {
 }
 /* containers */
 .container-menu,
-.container-banner { 
-	width: 100%; 
-	max-width: 1080px; 
-	padding: 0; 
-	margin: auto; 
+.container-banner {
+	width: 100%;
+	max-width: 1080px;
+	padding: 0;
+	margin: auto;
 }
 header > .container-menu {
 	margin-top: 130px;
@@ -86,11 +86,11 @@ header > .container-menu {
 .top-menu .container-menu {
 	background: inherit;
 }
-.container { 
-	width: 100%; 
-	max-width: 1080px; 
-	padding: 20px; 
-	margin: auto; 
+.container {
+	width: 100%;
+	max-width: 1080px;
+	padding: 20px;
+	margin: auto;
 	background: #CCDFEC;
 	display: flex;
 	flex-wrap: wrap;
@@ -107,7 +107,7 @@ header > .container-menu {
 }
 /* signin */
 .signin-card {
-	background: #2a3955; 
+	background: #2a3955;
 	padding: 15px;
 	margin-top: 75px;
 	margin-bottom: 50px;
@@ -158,7 +158,7 @@ body.signin-body {
 	font-size: 15px;
 	color: #8095bb;
 }
-/* header */ 
+/* header */
 .top-menu {
 	background: #004B7E;
 	padding: 0;
@@ -167,16 +167,16 @@ body.signin-body {
 	overflow: hidden;
 }
 .top-menu > .container-menu > img {
-	width: 10%; 
-	height: auto; 
+	width: 10%;
+	height: auto;
 	margin: 5px 0;
-} 
-/*.profile-thing {  это нужно для фотки человека 
+}
+/*.profile-thing {  это нужно для фотки человека
 	float: right;
 }
 .profile-photo img {
-	width: 10%; 
-	height: auto; 
+	width: 10%;
+	height: auto;
 	margin: 5px 0;
 	float: right;
 }*/
@@ -184,19 +184,19 @@ body.signin-body {
 .main-menu {
 	background: #004B7E;
 }
-nav ul { 
-	margin: 0; 
-	font-size: 0; 
+nav ul {
+	margin: 0;
+	font-size: 0;
 }
-nav > ul > li { 
-	font-size: 15px; 
+nav > ul > li {
+	font-size: 15px;
 	color: #fff;
 	padding: 10px 0;
-	display: inline-block; 
+	display: inline-block;
 	vertical-align: middle;
-	margin: 0 5px; 
+	margin: 0 5px;
 	cursor: pointer;
-} 
+}
 nav > ul > li.menu-drop {
 	padding: 0;
 	cursor: pointer;
@@ -205,10 +205,10 @@ nav > ul > li .btn-group.show {
 	background: rgba(0, 55, 106, .9);
 	color: #ddd;
 }
-nav > ul > li.active { 
+nav > ul > li.active {
 	background: #002C4A;
 }
-nav > ul > li a { 
+nav > ul > li a {
 	padding: 10px;
 	cursor: pointer;
 	transition: .5s;
@@ -222,7 +222,7 @@ nav > ul > li > a:hover {
 nav > ul > li .btn-group {
 	transition: .5s;
 }
-nav > ul > li .btn-group:hover { 
+nav > ul > li .btn-group:hover {
 	background: rgba(0, 55, 106, .9);
 	text-decoration: none;
 	color: #ddd;
@@ -323,7 +323,7 @@ ul.dropdown-menu li:hover {
     width: 100px;
     height: 100px;
 }
-.loader hr{ 
+.loader hr{
 	border: 0;
 	margin: 0;
 	width: 40%;
@@ -397,12 +397,12 @@ tr.lesson-now {
 	background: #CCDFEC;
 }
 /* notifications */
-.notifications { 
+.notifications {
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 }
-.notifications .one-notif { 
+.notifications .one-notif {
 	padding: 10px;
 	margin-right: 15px;
 	flex-basis: 50%;
@@ -573,18 +573,18 @@ textarea.form-control {
 	background: #E26638;
 }
 /* banners */
-.container-banner { 
-	width: 100%; 
-	max-width: 1080px; 
-	padding: 0; 
-	margin: auto; 
+.container-banner {
+	width: 100%;
+	max-width: 1080px;
+	padding: 0;
+	margin: auto;
 }
 #rotator {
-	position: relative; 
+	position: relative;
 }
 #rotator ul li {
-	float: left; 
-	position: absolute; 
+	float: left;
+	position: absolute;
 	list-style: none;
 	max-height: 80px;
 	overflow: hidden;
@@ -1035,7 +1035,7 @@ img.answer {
 	transition: .3s;
 	align-self: flex-start;
 }
-.one-day:hover { 
+.one-day:hover {
 	box-shadow: 5px 5px 7px #666;
 }
 .one-day h3 {
@@ -1045,9 +1045,48 @@ img.answer {
 	font-weight: 500;
 	margin-bottom: 0;
 }
+/* status */
+.status-set-button {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    font-size: 20px;
+    margin: 0 auto;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
+.status-set-has {
+    background: rgb(0,75,126);
+    color: #fff;
+    border: 1px solid #999;
+}
+.status-set-hasnt {
+    color: rgb(0,75,126);
+    background: #fff;
+    border: 1px solid #999;
+}
+.group-students {
+    width: 100%;
+}
+.group-students td {
+    border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.group-student-name {
+    width: 200px;
+}
+.group-status {
+    width: 60%;
+    margin-bottom: 30px;
+}
 /* main */
 .w-45 {
 	width: 45%;
+}
+.w-30 {
+    width: 30%;
 }
 .b-10 {
 	margin-bottom: 10px;
