added help button to status page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
 @import 'variables.scss';
-/* defailts */
+/* defaults */
 * {
 	margin: 0;
 	padding: 0;
@@ -298,9 +298,6 @@ ul.dropdown-menu li:hover {
 	border: 1px solid #CCDFEC;
 	border-top: 1px solid #93BAC8;
 	border-bottom: 1px solid #93BAC8;
-}
-.right-menu .btn-group {
-	margin-bottom: 2px;
 }
 .right-dropdown-menu {
 	left: auto !important;
@@ -1096,11 +1093,17 @@ img.answer {
     flex-wrap: wrap;
 }
 .one-selector {
-    width: 30%;
+    width: 40%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 .one-selector:first-child {
     width: 20%;
+}
+.one-selector:nth-child(2) {
+    width: 30%;
+}
+.one-selector:last-child {
+    width: 50%;
 }
 .one-selector .button-filter {
     margin-bottom: 10px;
@@ -1127,6 +1130,9 @@ img.answer {
     display: inline-block;
     width: 100%;
 }
+.dis-none {
+    display: none;
+}
 /* main */
 .w-45 {
 	width: 45%;
@@ -1141,3 +1147,4 @@ img.answer {
 	padding-left: 10px !important;
 }
 @import 'media-queries.scss';
+@import 'tooltip.scss';
