--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -921,6 +921,36 @@ textarea.form-control {
 	transition: .5s;
 	cursor: pointer;
 }
+.delete-document {
+    border: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+    font-weight: bold;
+    transition: .5s;
+    text-align: center;
+    cursor: pointer;
+    color: #7F2200;
+    background: #E26638;
+}
+.edit-document {
+    border: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    font-size: 15px;
+    font-weight: bold;
+    transition: .5s;
+    text-align: center;
+    cursor: pointer;
+    background: #77a5f8;
+    color: #000;
+    margin-left: 10px;
+}
+.edit-document:hover {
+    background: #99BDFF;
+}
 /* submit */
 .submit {
 	font-family: 'Courier New', arial;
