added changing mid and mark

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1062,6 +1062,15 @@ img.answer {
 .role_select {
 	height: auto;
 }
+/* marks */
+.mark-change {
+    width: 15px;
+    height: 20px;
+}
+.mid-change {
+    width: 40px;
+    height: 20px;
+}
 /* timetable */
 .one-day {
 	flex-basis: 30%;
