added help to marks page

--- a/resources/sass/tooltip.scss
+++ b/resources/sass/tooltip.scss
@@ -1,5 +1,8 @@
 .help-block {
     position: relative;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
 }
 .help {
     border-radius: 50%;
