--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1176,7 +1176,13 @@ img.answer {
 }
 /* main */
 .w-45 {
-	width: 45%;
+    width: 45%;
+}
+.w-40 {
+    width: 40%;
+}
+.w-35 {
+	width: 35%;
 }
 .w-30 {
     width: 30%;
