--- a/resources/sass/media-queries.scss
+++ b/resources/sass/media-queries.scss
@@ -42,6 +42,20 @@
     .check {
         margin-bottom: 10px;
     }
+    .buttons .button-filter {
+        margin-bottom: 5px;
+        font-size: 14px;
+    }
+    .group-status {
+        width: 100%;
+    }
+    .pl-10 {
+        padding-left: 0;
+    }
+    span.tip {
+        font-size: 12px;
+        width: 120px;
+    }
 }
 @media (min-width: 426px) and (max-width: 768px) {
     .signin-card {
@@ -57,6 +71,12 @@
         margin-left: 15px;
         vertical-align: middle;
     }
+    header > .container-menu {
+        margin-top: 30px;
+    }
+    .container-banner {
+        display: none;
+    }
     .hidden-sm {
         display: none;
     }
@@ -65,6 +85,25 @@
     }
     .check {
         margin-bottom: 10px;
+    }
+    .buttons .button-filter {
+        margin-bottom: 5px;
+        font-size: 14px;
+    }
+    .group-status {
+        width: 100%;
+    }
+    .pl-10 {
+        padding-left: 0;
+    }
+    span.tip {
+        right: -20px;
+    }
+}
+@media (min-width: 595px) and (max-width: 725px) {
+    span.tip {
+        right: 0px;
+        left: -15px;
     }
 }
 @media (min-width: 769px) and (max-width: 1024px) {
