fixed breaking words on banners page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -649,6 +649,7 @@ textarea.form-control {
 	margin-bottom: 5px;
 	color: #4D4D4D;
 	font: 16px/1.5 "Open Sans", arial;
+    word-break: break-all;
 }
 .banner-label a {
 	color: rgb(0, 75, 126);
