--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -506,6 +506,7 @@ tr.lesson-now {
 .form-control {
 	display: block;
 	width: 100%;
+    height: auto;
 	padding: 6px 12px;
 	margin-bottom: 10px;
 	font-size: 14px;
