user select component design v1

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1352,6 +1352,7 @@ img.answer {
 .pl-10 {
 	padding-left: 10px;
 }
+@import 'user-select.scss';
 @import 'tooltip.scss';
 @import 'notes.scss';
 @import 'media-queries.scss';
