--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1352,6 +1352,9 @@ img.answer {
 .pl-10 {
 	padding-left: 10px;
 }
+.t-20 {
+    margin-top: 20px;
+}
 @import 'user-select.scss';
 @import 'tooltip.scss';
 @import 'notes.scss';
